tests/baselines/reference/es6ImportWithoutFromClauseWithExport.errors.txt
client.ts(1,1): error TS1191: An import declaration cannot have modifiers.
client.ts(1,15): error TS2882: Cannot find module or type declarations for side-effect import of 'server'.


==== server.ts (0 errors) ====
    export var a = 10;
    
==== client.ts (2 errors) ====
    export import "server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
                  ~~~~~~~~
!!! error TS2882: Cannot find module or type declarations for side-effect import of 'server'.